--- a/requirements.txt
+++ b/requirements.txt
@@ -270,7 +270,6 @@ jupyter-events==0.12.0
 jupyter-leaflet==0.20.0
 jupyter_client==7.4.9
 jupyter_core==5.9.1
-jupyter_kernel_gateway @ git+https://github.com/googlecolab/kernel_gateway@b134e9945df25c2dcb98ade9129399be10788671
 jupyter_server==2.14.0
 jupyter_server_terminals==0.5.3
 jupyterlab_pygments==0.3.0
@@ -296,7 +295,6 @@ lazr.restfulclient==0.14.4
 lazr.uri==1.0.6
 lazy_loader==0.4
 libclang==18.1.1
-libcudf-cu12 @ https://pypi.nvidia.com/libcudf-cu12/libcudf_cu12-25.6.0-py3-none-manylinux_2_28_x86_64.whl
 libcugraph-cu12==25.6.0
 libcuml-cu12==25.6.0
 libcuvs-cu12==25.6.1
@@ -307,7 +305,7 @@ librmm-cu12==25.6.0
 librosa==0.11.0
 libucx-cu12==1.18.1
 libucxx-cu12==0.44.0
-lightgbm @ file:///tmp/lightgbm/LightGBM/dist/lightgbm-4.6.0-py3-none-linux_x86_64.whl
+lightgbm
 linkify-it-py==2.0.3
 llvmlite==0.43.0
 locket==1.0.0
